<resources>
    <string name="app_name">Mark Note</string>
    <string name="language_code">en</string>
    <string name="text_presets">Presets</string>
    <string name="text_custom">Custom</string>
    <string name="text_add_more">Add&#8230;</string>
    <string name="text_add_to_home_screen">Add shortcut</string>
    <string name="text_about">About</string>
    <string name="text_accept">Accept</string>
    <string name="text_tags">Tags</string>
    <string name="text_add_tags">Add Tags</string>
    <string name="text_add_location">Add location</string>
    <string name="text_clear">Clear</string>
    <string name="text_copy_text">Copy content</string>
    <string name="text_comments">Comments</string>
    <string name="text_copy_link">Copy link</string>
    <string name="text_comment">Comment</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_close">Close</string>
    <string name="text_created_at">Created at</string>
    <string name="text_last_modified_at">Last updated at</string>
    <string name="text_delete">Delete</string>
    <string name="text_deleted">Deleted</string>
    <string name="text_delete_still">Delete still</string>
    <string name="text_edit">Edit</string>
    <string name="text_find_in_page">Find in page</string>
    <string name="text_font">Font</string>
    <string name="text_next">Next</string>
    <string name="text_last">Last</string>
    <string name="text_give_up">Give up</string>
    <string name="text_last_sync_time">Last sync time</string>
    <string name="text_more">More</string>
    <string name="text_pick">Pick</string>
    <string name="text_preview">Preview</string>
    <string name="text_print_pdf">Print PDF</string>
    <string name="text_reset">Rest</string>
    <string name="text_send">Send</string>
    <string name="text_settings">Settings</string>
    <string name="text_share">Share</string>
    <string name="text_share_image">Share image</string>
    <string name="text_share_text">Share text</string>
    <string name="text_share_html">Share html</string>
    <string name="text_search">Search</string>
    <string name="text_save_or_discard">Save or discard modification?</string>
    <string name="text_save_successfully">Saved successfully</string>
    <string name="text_error_when_save">Error occurred when save data.</string>
    <string name="text_file_saved_to">File is saved to %s</string>
    <string name="text_save">Save</string>
    <string name="text_statistic">Statistics</string>
    <string name="text_save_and_retry_to_add_shortcut">The project hasn\'t been saved, unable to add shortcut. Please try again after saved.</string>
    <string name="text_save_and_retry">Save and retry</string>
    <string name="text_tips">Tips</string>
    <string name="text_warning">Warning</string>
    <string name="text_location_info">Location</string>
    <string name="text_no_location_info">Location not found</string>
    <string name="text_show_location">Show location</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="trying_to_get_location">Trying to get location&#8230;</string>
    <string name="content_was_copied_to_clipboard">Content has been saved to clipboard</string>
    <string name="share_message_chooser">Select share mode</string>
    <string name="cannot_get_link_of_not_synced_item">Unable to get link of un-synchronized project</string>
    <string name="title_required">Title required</string>
    <string name="successfully_add_shortcut">Successfully add shortcut</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_back">Back</string>
    <string name="text_color">Color</string>
    <string name="text_portrait">Portrait</string>
    <string name="set_successfully">Set successfully</string>
    <string name="items">Items</string>
    <string name="text_other_ways">Other ways</string>
    <string name="text_trash">Trash</string>
    <string name="text_archived">Archive</string>
    <string name="text_move_out">Move out</string>
    <string name="text_tab_again_exit">Again to exit</string>
    <string name="text_attachment">Attachment</string>
    <string name="working">Working&#8230;</string>
    <string name="text_input_password_and_continue">Input password</string>
    <string name="text_ok">OK</string>
    <string name="text_export_html">Export html</string>
    <string name="text_failed_to_load_data">Failed to load data.</string>
    <string name="text_failed_to_modify_data">Failed to modify data.</string>
    <string name="text_pick_from_album">Pick from album</string>
    <string name="text_rate_app">评价 APP</string>
    <string name="text_menu">Menu</string>
    <string name="text_backup">Backup</string>
    <string name="text_done">Done</string>
    <string name="text_search_with">Search &#8230;</string>
    <string name="text_open_in_browser">在浏览器中打开</string>
    <string name="text_file_not_exist">File not found</string>
    <string name="text_redo">Redo</string>
    <string name="text_undo">Undo</string>
    <string name="text_title">Title</string>
    <string name="text_chars">Count</string>
    <string name="text_succeed">Succeed</string>
    <string name="text_failed_to_save_file">Failed to save file</string>
    <string name="text_failed_to_resolve_intent">No available application</string>
    <string name="text_note_not_found">Note not found.</string>
    <string name="text_failed_to_read_note_file">Failed to read note file.</string>
    <string name="text_failed_to_save_note">Failed to save note.</string>
    <string name="note_change_notebook">Change Notebook</string>
    <string name="note_change_categories">Change Categories</string>
    <string name="note_send">Send to Another App</string>
    <string name="note_copy_content">Copy Content</string>
    <string name="note_copy_title">Copy Title</string>
    <string name="note_settings">Note Settings</string>
    <string name="note_hint_content">Start writing your note here&#8230;</string>
    <string name="note_copied_success">Copied successfully.</string>
    <string name="check_network_availability">Check network availability</string>
    <string name="empty_list_to_capture">Empty list to capture</string>
    <string name="capture_list">Capture</string>
    <string name="capturing">Capturing&#8230;</string>
    <string name="include_tags">Include tags</string>
    <string name="include_archived">Archived</string>
    <string name="include_trashed">Trashed</string>
    <string name="no_search_result_found">Result not found</string>
    <string name="try_other_conditions">try another condition and search again</string>
    <string name="drawer_menu_notebooks">Notebooks</string>
    <string name="drawer_menu_categories">Categories</string>
    <string name="drawer_menu_trash">Trashed</string>
    <string name="drawer_menu_archive">Archived</string>
    <string name="drawer_menu_statistics">Statistics</string>
    <string name="drawer_menu_time_line">TimeLine</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_menu_share">Share</string>
    <string name="drawer_menu_donate">Donate</string>
    <string name="shortcut_add_long_name">Create new notes</string>
    <string name="shortcut_add_short_name">Create</string>
    <string name="shortcut_search_long_name">Search notes</string>
    <string name="shortcut_search_short_name">Search</string>
    <string name="shortcut_quick_long_name">Create quick note</string>
    <string name="shortcut_quick_short_name">Quick</string>
    <string name="shortcut_capture_long_name">Capture pictures</string>
    <string name="shortcut_capture_short_name">Capture</string>
    <string name="fab_opt_note">Note</string>
    <string name="fab_opt_notebook">Notebook</string>
    <string name="fab_opt_tags">Tags</string>
    <string name="fab_opt_capture">Capture</string>
    <string name="fab_opt_file">File</string>
    <string name="fab_opt_draft">Sketch</string>
    <string name="fab_opt_link">Link</string>
    <string name="fab_opt_record">Record</string>
    <string name="fab_opt_notice">Alarm</string>
    <string name="fab_quick_note">Quick note</string>
    <string name="fab_sort_custom_fab">Custom fabs</string>
    <string name="fab_sort_custom">Custom&#8230;</string>
    <string name="fab_sort_custom_fab_tip">Drag the rear icon to sort, the top 5 ones will be showed in dashboard.</string>
    <string name="fab_sort_save">Save</string>
    <string name="fab_sort_save_or_lose">Save or discard your modifications</string>
    <string name="fab_sort_save_successfully">Successfully saved</string>
    <string name="note_default_name">Untitled Note</string>
    <string name="note_note_information">Information</string>
    <string name="content_failed_to_parse_intent">Failed to parse the intent</string>
    <string name="note_failed_to_read_file">Failed to read file</string>
    <string name="note_failed_to_get_note_content">Failed to read content</string>
    <string name="text_no_such_note">Note not found</string>
    <string name="note_note_title">Note title</string>
    <string name="note_write_down_what_you_want">Write down your note&#8230;</string>
    <string name="note_default_notebook">Default notebook</string>
    <string name="edit_notebook">Edit notebook</string>
    <string name="notebook_edit_name_hint">Input your notebook name</string>
    <string name="notebook_edit_tips">使用笔记本整理你的笔记</string>
    <string name="pick_notebook_color">Select the color of notebook</string>
    <string name="note_capture_note">Capture note</string>
    <string name="all_notes">All notes</string>
    <string name="text_replace_tab_with_4_spaces">Use 4 spaces replaces Tab</string>
    <string name="notes_list_empty">Empty notes list</string>
    <string name="setting_category_personal">个性化</string>
    <string name="setting_category_personal_theme">主题</string>
    <string name="setting_category_personal_theme_sub">更改应用的主题颜色</string>
    <string name="setting_category_personal_beautify_date">美化日期</string>
    <string name="setting_category_personal_beautify_date_sub">使用简化的日期</string>
    <string name="setting_category_help_translate">Translate</string>
    <string name="setting_category_help_translate_sub">If you want to translate or improve your language, please contact me: shouheng2015@gmail.com</string>
    <string name="setting_category_about_privacy">隐私政策</string>
    <string name="setting_category_about_open_source">开源许可</string>
    <string name="setting_preference">Universal</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_backup_sub">Import and export data</string>
    <string name="setting_data_security">Security</string>
    <string name="setting_data_security_sub">Add independent lock</string>
    <string name="setting_note">Note</string>
    <string name="setting_note_sub">Set note performance</string>
    <string name="setting_colored_navigation_bar">Colored navigation bar</string>
    <string name="setting_colored_navigation_bar_sub">Use colored navigation bar</string>
    <string name="setting_help">Help</string>
    <string name="setting_online_user_guide">User guide</string>
    <string name="setting_online_user_guide_sub">Get online user guide</string>
    <string name="setting_others">Others</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_feedback_sub">Help developer make application better</string>
    <string name="setting_about">About</string>
    <string name="setting_about_sub">Details about this application</string>
    <string name="custom_fab">Custom float buttons</string>
    <string name="custom_fab_sub">Custom float action buttons behaviors of dashboard</string>
    <string name="setting_custom_note_menu_sub">Custom note bottom menu edit page</string>
</resources>