<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_category_personal">

        <Preference android:title="@string/setting_category_personal_theme"
            android:summary="@string/setting_category_personal_theme_sub"
            android:persistent="false"
            android:icon="@drawable/ic_color_lens_black_24dp"
            android:key="@string/key_setting_theme"/>

        <SwitchPreference android:title="@string/setting_category_personal_beautify_date"
            android:summary="@string/setting_category_personal_beautify_date_sub"
            android:defaultValue="true"
            android:key="@string/key_setting_theme_beautify_date"/>

        <Preference
            android:key="@string/key_custom_fab"
            android:persistent="false"
            android:title="@string/custom_fab"
            android:summary="@string/custom_fab_sub"/>

        <Preference
            android:key="@string/key_note_editor_menu_sort"
            android:persistent="false"
            android:title="@string/setting_custom_note_menu_sub"
            android:summary="@string/setting_custom_note_menu_sub"/>

        <SwitchPreference android:title="@string/setting_colored_navigation_bar"
            android:key="colored_navigation_bar"
            android:defaultValue="true"
            android:summary="@string/setting_colored_navigation_bar_sub"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_preference">

        <Preference
            android:title="@string/setting_note"
            android:key="@string/key_key_note_settings"
            android:persistent="false"
            android:summary="@string/setting_note_sub"/>

        <Preference
            android:key="@string/key_data_security"
            android:persistent="false"
            android:title="@string/setting_data_security"
            android:summary="@string/setting_data_security_sub" />

        <Preference
            android:key="@string/key_data_backup"
            android:persistent="false"
            android:icon="@drawable/ic_wb_cloudy_black_24dp"
            android:title="@string/setting_backup"
            android:summary="@string/setting_backup_sub"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_help">

        <Preference
            android:key="user_guide"
            android:persistent="false"
            android:title="@string/setting_online_user_guide"
            android:summary="@string/setting_online_user_guide_sub"/>

        <Preference
            android:key="feedback"
            android:persistent="false"
            android:title="@string/setting_feedback"
            android:summary="@string/setting_feedback_sub"/>

        <Preference android:title="@string/setting_category_help_translate"
            android:persistent="false"
            android:summary="@string/setting_category_help_translate_sub"
            android:key="@string/key_setting_item_help_translate"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_others">

        <Preference
            android:key="about"
            android:persistent="false"
            android:title="@string/setting_about"
            android:summary="@string/setting_about_sub"/>

        <Preference android:title="@string/setting_category_about_privacy"
            android:persistent="false"
            android:key="@string/key_setting_item_about_privacy"/>

        <Preference android:title="@string/setting_category_about_open_source"
            android:persistent="false"
            android:key="@string/key_setting_item_about_open_source"/>

    </PreferenceCategory>

</PreferenceScreen>